@@ -64,7 +64,7 @@ if ( $page == 'edit_remotes' || $page == 'edit_nonuser' ) {
         translate ( 'Email address XXX already exists.', true ) );
   }
 } elseif ( $page == 'minitask' ) {
-  $name = ( ! empty ( $name ) ? $name : 0 );
+  $name = ( empty ( $name ) ? 0 : $name );
   require_once 'includes/classes/Event.class';
   require_once 'includes/classes/RptEvent.class';
   include_once 'includes/gradient.php';
